--- a/peek-a-boo.html
+++ b/peek-a-boo.html
@@ -14,6 +14,18 @@
           <strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent children's pastime, you may change your mind when you learn of its treacherous history.
         </p>
 
+      <div id="text-showing">
+        <p>
+          <span class="clickable">Hide images.</span>
+        </p>
+      </div>
+
+      <div id="text-hidden">
+        <p>
+          <span class="clickable">Show images.</span>
+        </p>
+      </div>
+
       <div id="walrus-hidden">
         <p>Let's play peek-a-boo. <span class="clickable">Click here</span> to see the surprise!</p>
       </div>
